--- a/saml/advanced_settings.json
+++ b/saml/advanced_settings.json
@@ -9,7 +9,7 @@
     "wantAssertionsSigned": false,
     "wantNameId": true,
     "wantNameIdEncrypted": false,
-    "wantAssertionsEncrypted": true,
+    "wantAssertionsEncrypted": false,
     "signatureAlgorithm": "http://www.w3.org/2001/04/xmldsig-more#rsa-sha256",
     "digestAlgorithm": "http://www.w3.org/2001/04/xmlenc#sha256",
     "metadataValidUntil": "",
